# python-project-template

./: README.md  pyproject.toml  tasks.py
.github/workflows/: docs.yml  tests.yml
docs/source/: conf.py  development_setup.md  index.md  markdown_example.md  modules.rst  notebook_example.ipynb  quickstart.md  sample_project.rst
src/sample_project/: __init__.py  __main__.py  sample_add.py
test/: test_add.py
