[project]
name = "sample-project"
version = "0.1.0"
description = "Sample Project for Demonstration"
readme = "README.md"
authors = [{ name = "trash-iine" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
sample-project = "sample_project.__main__:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # docs
    "sphinx==8.2.3",      # docs generator, myst-parser v4.0.1 is not supported for sphinx v9+
    "furo>=2025.12.19",   # docs theme
    "myst-parser>=4.0.1", # to generate docs with Markdown files
    "nbsphinx>=0.9.3",    # to generate docs with Jupyter notebooks
    "ipython>=9.9.0",     # to generate docs with Jupyter notebooks
    "ipykernel>=7.1.0",   # to generate docs with Jupyter notebooks
    "pandoc>=2.4",        # to generate docs
    # lint / type check / test
    "ruff>=0.14.11", # code linter
    "ty>=0.0.11",    # type checker
    "pytest>=9.0.2", # test framework
    # task runner
    "invoke>=2.2.1", # task runner
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # This rule is incompatible to `D211`
    "D213",   # This rule is incompatible to `D212`
    "COM812", # This rule may cause conflicts
]

[tool.ruff.lint.per-file-ignores]
"**/test/*.py" = [
    "S101",    # Allow assert statements in tests
    "PLR2004", # Allow magic numbers in tests
]

"docs/source/conf.py" = [
    "A001",   # Shadowing built-in name
    "INP001", # No __init__.py file
    "D100",   # Missing docstring in public module
]

"docs/source/*.ipynb" = [
    "ANN001", # Missing type annotation for argument
    "ANN201", # Missing return type annotation
    "T201",   # Using print function
]

"tasks.py" = [
    "A001",   # Shadowing built-in name
    "ANN001", # Missing type annotation for argument
    "ANN201", # Missing return type annotation
    "T201",   # Using print function
]
